# ml-playground

./: .gitignore  README.md  dockerfile  index.html  pyproject.toml
.github/workflows/: deploy-gh-pages.yml  deploy.yml
modeling/: DOCKER_SETUP.md  __init__.py  docker_setup.sh  requirements.txt  setup_env.sh  validate_verl.py
modeling/basics/: README.md  attention.py  test_attention.py
modeling/generation/: README.md  __init__.py  celeba_dataloader.py  image_dataloader.py  requirements.txt
modeling/generation/ae/: README.md  README_VAE.md  README_inference.md  __init__.py  autoencoder.py  example_inference.py  inference_autoencoder.py  inference_vae.py  train_autoencoder.py  train_vae.py  vae.py
modeling/llm_embedding/: README.md  __init__.py  config.py  data.py  inference.py  loss.py  model.py  training.py  utils.py
modeling/llm_post_training/: .env.template  Dockerfile  README.md  README_VERL.md  chat_mode.py  compare_base_vs_sft.py  dpo_training.py  instruction_sft.py  model_utils.py  reasoning_grpo.py  reasoning_grpo_verl.py  requirements.txt  setup_env.sh  test_sft_model.py
modeling/llm_post_training/data_process/: README.md  convert_silk_road_to_alpaca.py  knowledge_distillation.py  llm_api_interface.py  prompt_manager.py  requirements.txt
modeling/llm_post_training/data_process/prompt_configs/: instruction_generation.yaml  (+2 more)
modeling/llm_post_training/tools/: README.md  vocab_inspect.py
scripts/: sync-gh-pages.sh
tests/: __init__.py
tests/modeling/: __init__.py
tests/modeling/generation/: __init__.py
visualizations/pac-man/: packman.html
(+4 files in other folders)
